[gd_scene load_steps=3 format=3 uid="uid://2vwggparonoj"]

[ext_resource type="Script" uid="uid://cr7llkc4oor6g" path="res://scripts/ShopMenu.gd" id="1_voj7l"]
[ext_resource type="Script" uid="uid://caw3akmty42o" path="res://scripts/placement_hint.gd" id="2_342an"]

[node name="Node" type="Node"]

[node name="ShopMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 149.0
offset_right = 248.0
offset_bottom = 457.0
script = ExtResource("1_voj7l")

[node name="PanelContainer" type="PanelContainer" parent="ShopMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ShopMenu/PanelContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="ShopMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Инопланетная казарма тип 1
XP: 100
Кол-во юнитов: 1
Стоимость: 3
"

[node name="Button2" type="Button" parent="ShopMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Инопланетная казарма тип 2
XP: 175
Кол-во юнитов: 3
Стоимость: 7
"

[node name="Button3" type="Button" parent="ShopMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Инопланетная казарма тип 3
XP: 250
Кол-во юнитов: 5
Стоимость: 10
"

[node name="PlacementHint" type="Label" parent="."]
offset_left = 6.0
offset_top = 593.0
offset_right = 263.0
offset_bottom = 642.0
text = "Выберите место на карте
Нажмите [Esc], чтобы отменить"
script = ExtResource("2_342an")
